clearer md output.

--- a/laxyam/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/02.md
+++ b/laxyam/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/02.md
@@ -142,7 +142,7 @@ unicode_script = "devanagari"
 </div>
 
 
-### वनदेवतापूजा
+### वनदेवतापूजादि
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
@@ -173,6 +173,7 @@ unicode_script = "devanagari"
 मरुदिति॥ मरुत्प्रयुक्ता वायुना प्रेरिता बाललता आरात् समीपेऽभिवर्तमानम्। 'आराद्दूरसमीपयोः' इत्यमरः। मरुतो वायोः सखा मरुत्सखोऽग्निः। स इवाभातीति मरुत्सखाभः। 'आतश्चोपसर्गे'(पा.3।1।136) इति कप्रत्ययः। तम्,अर्च्यं पूज्यं तं दिलीपं प्रसूनैः पुष्पैः। पौरकन्याः पौराश्च ताः कन्या आचारार्थैर्लाजैराचारलाजैरिव। अवाकिरन्। तस्योपरि निक्षिप्तवत्य इत्यर्थः। सखा हि सखायमागतमुपचरतीति भावः ॥ 10 ॥
 </details>
 </div>
+
 <div caption="वेदभूमिपाठः" class="audioEmbed" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga02-11-20.mp3"></div>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
@@ -223,10 +224,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-**शशाम** वृष्ट्यापि विना **दवाग्निर्**+++(5)+++  
+**शशाम** वृष्ट्या ऽपि विना **दवाग्निर्**+++(5)+++  
 **आसीद्** विशेषा **फल-पुष्प-वृद्धिः** ।  
 **ऊनं न** सत्त्वेष्व् **अधिको बबाधे**  
-तस्मिन् वनं गोप्तरि गाहमाने ॥ १४ ॥+++(5)+++  
+तस्मिन् वनं गोप्तरि **गाहमाने** ॥ १४ ॥+++(5)+++  
 </details>
 
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/14.md">
@@ -236,6 +237,7 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+### प्रत्यागतिः
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 **सञ्चार-पूतानि** दिग्-अन्तराणि  
@@ -271,7 +273,7 @@ unicode_script = "devanagari"
 स पल्वलोत्तीर्ण-वराह-यूथान्य्  
 आवास-वृक्षोन्मुख-बर्हिणानि ।  
 **ययौ** मृगाध्यासित-शाद्वलानि  
-श्यामायमानानि वनानि **पश्यन्** ॥ १७ ॥  
+**श्यामायमानानि** वनानि **पश्यन्** ॥ १७ ॥+++(4)+++  
 </details>
 
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/17.md">
@@ -284,7 +286,7 @@ unicode_script = "devanagari"
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 आपीनभारोद्वहन-प्रयत्नाद्  
-गृष्टिर्+++(=सकृत्प्रसूता गौः)+++, गुरुत्वाद् वपुषो नरेन्द्रः ।  
+गृष्टिर्+++(=सकृत्-प्रसूता गौः)+++, गुरुत्वाद् वपुषो नरेन्द्रः ।  
 उभाव् **अलञ्चक्रतुर् अञ्चिताभ्यान्**  
 तपोवनावृत्ति-पथं गताभ्याम् ॥ १८ ॥  
 </details>
@@ -313,8 +315,8 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-पुरस्-कृता वर्त्मनि पार्थिवेन,  
-प्रत्युद्गता पार्थिव-धर्म-पत्न्या ।  
+**पुरस्-कृता** वर्त्मनि पार्थिवेन,  
+**प्रत्युद्गता** पार्थिव-धर्म-पत्न्या ।  
 तद्-अन्तरे सा **विरराज धेनुर्**  
 दिन-क्षपा-मध्य-गतेव सन्ध्या ॥ २० ॥  
 </details>
@@ -329,7 +331,7 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-प्रदक्षिणी-कृत्य पयस्विनीन् तां  
+**प्रदक्षिणी-कृत्य** पयस्विनीन् तां  
 सुदक्षिणा साक्षत-पात्र-हस्ता ।  
 **प्रणम्य चानर्च** विशालम्  
 अस्याः **शृङ्गान्तरन्** द्वारम् इवार्थ-सिद्धेः ॥ २१ ॥  
@@ -350,6 +352,7 @@ unicode_script = "devanagari"
 प्रसाद-चिह्नानि पुरः-फलानि ॥ २२ ॥  
 </details>
 
+### विश्रान्ताव् उपचारः
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/22.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -359,8 +362,8 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-गुरोः सदारस्य निपीड्य पादौ  
-समाप्य सान्ध्यञ्च विधिन् दिलीपः ।  
+गुरोः सदारस्य **निपीड्य** पादौ  
+**समाप्य** सान्ध्यञ्च विधिन् दिलीपः ।  
 दोहावसाने पुनर् एव **दोग्ध्रीम्**  
 **भेजे** भुजोच्छिन्न-रिपुर् निषण्णाम् ॥ २३ ॥  
 </details>
@@ -402,6 +405,8 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+## परीक्षा
+### ग्रहः
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अन्येद्युर् आत्मानुचरस्य भावं  
@@ -432,6 +437,7 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+### स्तम्भः
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तदीयम् **आक्रन्दितम्** आर्त-साधोर्  
@@ -449,9 +455,9 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-स पाटलायाङ्+++(=रक्तवर्णायां)+++ गवि तस्थिवांसन्  
+स पाटलायाङ्+++(=रक्तवर्णायां)+++ गवि **तस्थिवांसं**  
 धनुर्-धरः **केसरिणन् ददर्श** ।  
-अधित्यकायाम्+++(=उन्नत-भागे)+++ इव धातुमय्याल्ँ  
+अधित्यकायाम्+++(=उन्नत-भागे)+++ इव धातुमय्यां  
 +++(पिङ्गल-प्राय-)+++लोध्र-द्रुमं सानु-मतः +++(अद्रेः)+++ प्रफुल्लम् ॥ २९ ॥  
 </details>
 
@@ -507,6 +513,7 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+### सिंह-प्रभावः
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तम् आर्य-गृह्यं निगृहीत-धेनुर्  
@@ -558,7 +565,7 @@ unicode_script = "devanagari"
 अमुम् पुरः **पश्यसि देव-दारुम्**  
 पुत्री-कृतो ऽसौ वृषभ-ध्वजेन ।  
 यो हेम-कुम्भ-स्तन-निःसृतानां  
-स्कन्दस्य मातुः पयसार्ँ रसज्ञः ॥ ३६ ॥  
+स्कन्दस्य मातुः पयसां रसज्ञः ॥ ३६ ॥  
 </details>
 
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/36.md">
@@ -622,12 +629,13 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+### मोहन-यत्नः
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 **स त्वं निवर्तस्व** विहाय लज्जां  
 गुरोर् भवान् दर्शित-शिष्य-भक्तिः ।  
 शस्त्रेण रक्ष्यं यद् अशक्य-रक्षं  
-न तद् यशः शस्त्र-भृतां क्षिणोति ॥ ४० ॥
+**न** तद् यशः शस्त्र-भृतां **क्षिणोति** ॥ ४० ॥
 </details>
 <details><summary>मूलम्</summary>
 
@@ -643,12 +651,14 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-इति प्रगल्भम् पुरुसाधिराजो मृगाधिराजस्य वचो निशम्य ।  
-प्रत्याहतास्त्रो गिरिशप्रभावादात्मन्यवज्ञां शिथिलीचकार ॥ ४१ ॥
+इति प्रगल्भम् पुरुषाधिराजो  
+मृगाधिराजस्य **वचो निशम्य** ।  
+प्रत्याहतास्त्रो गिरि-श-प्रभावाद्  
+आत्मन्य् **अवज्ञां शिथिलीचकार** ॥ ४१ ॥
 </details>
 <details><summary>मूलम्</summary>
 
-इति प्रगल्भम् पुरुसाधिराजो मृगाधिराजस्य वचो निशम्य ।  
+इति प्रगल्भम् पुरुषाधिराजो मृगाधिराजस्य वचो निशम्य ।  
 प्रत्याहतास्त्रो गिरिशप्रभावादात्मन्यवज्ञां शिथिलीचकार ॥ ४१ ॥
 </details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/41.md">
@@ -661,13 +671,15 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-प्रत्यब्रवीच्चैनम् इषुप्रयोगे तत्पूर्वसङ्गे वितथप्रयत्नः ।  
-जडीकृतस्त्र्यम्बकविक्षणेन वज्रम् मुमुक्षन्निव वज्रपाणिः ॥ ४२ ॥
+**प्रत्यब्रवीच्** चैनम् इषु-प्रयोगे  
+तत्-पूर्वसङ्गे वितथ-प्रयत्नः ।  
+जडीकृतस् त्र्य्-अम्बक-वीक्षणेन  
+वज्रम् मुमुक्षन्न् इव वज्रपाणिः ॥ ४२ ॥
 </details>
 <details><summary>मूलम्</summary>
 
 प्रत्यब्रवीच्चैनम् इषुप्रयोगे तत्पूर्वसङ्गे वितथप्रयत्नः ।  
-जडीकृतस्त्र्यम्बकविक्षणेन वज्रम् मुमुक्षन्निव वज्रपाणिः ॥ ४२ ॥
+जडीकृतस्त्र्यम्बकवीक्षणेन वज्रम् मुमुक्षन्निव वज्रपाणिः ॥ ४२ ॥
 </details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/42.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
@@ -678,18 +690,30 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-प्रत्याह वैनं शरमोक्षवन्ध्यो मा पत्त्रपर्वात्स्वरभेदम् आप्तः ।  
-प्रहीणपूर्वध्वनिनाधिरूढस्तुलाम् असारेन शरद्घनेन ॥ ४२* ॥
-
-सर्ँरुद्धचेष्टस्य हेतुः हास्यं वचस्तद्यदहं विवक्षुः ।  
-अन्तर्गतम् प्राणभृतां हि वेद सर्वम् भवान्भावम् अतोऽभिधास्ये ॥ ४३ ॥
+**प्रत्याह** चैनं शर-मोक्ष-वन्ध्यो  
+भय-त्रपत्वात् स्वर-भेदम् आप्तः ।  
+प्रहीण-पूर्व-ध्वनिना **ऽधिरूढस्**  
+तुलाम् असारेन शरद्-घनेन ॥ ४२* ॥
 </details>
+
 <details><summary>मूलम्</summary>
 
-प्रत्याह वैनं शरमोक्षवन्ध्यो मा पत्त्रपर्वात्स्वरभेदम् आप्तः ।  
+प्रत्याह चैनं शरमोक्षवन्ध्यो भयत्रपत्वात् स्वरभेदम् आप्तः ।  
 प्रहीणपूर्वध्वनिनाधिरूढस्तुलाम् असारेन शरद्घनेन ॥ ४२* ॥
+</details>
 
-सर्ँरुद्धचेष्टस्य हेतुः हास्यं वचस्तद्यदहं विवक्षुः ।  
+
+<details open><summary>विश्वास-प्रस्तुतिः</summary>
+
+संरुद्ध-चेष्टस्य मृगेन्द्र कामं  
+हास्यं वचस् तद् यद् अहं **विवक्षुः** ।  
+अन्तर्गतम् प्राण-भृतां हि **वेद**  
+सर्वम् भवान्, भावम् अतो **ऽभिधास्ये** ॥ ४३ ॥
+</details>
+
+<details><summary>मूलम्</summary>
+
+संरुद्धचेष्टस्य मृगेन्द्र कामं हास्यं वचस्तद्यदहं विवक्षुः ।  
 अन्तर्गतम् प्राणभृतां हि वेद सर्वम् भवान्भावम् अतोऽभिधास्ये ॥ ४३ ॥
 </details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/43.md">
@@ -701,8 +725,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-मान्यः स मे स्थावरजङ्गमानां सर्गस्थितिप्रत्यवहारहेतुः ।  
-गुरोरपीदन् धनम् आहिताग्नेर्नश्यत्पुरस्तादनुपेक्षणीयम् ॥ ४४ ॥
+**मान्यः** स मे स्थावर-जङ्गमानां  
+सर्ग-स्थिति-प्रत्यवहार-हेतुः ।  
+गुरोर् अपीदन् धनम् आहिताग्नेर्  
+**नश्यत्** पुरस्ताद् **अनुपेक्षणीयम्** ॥ ४४ ॥
 </details>
 <details><summary>मूलम्</summary>
 
@@ -718,8 +744,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-स त्वम् मदीयेन शरीरवृत्तिन् देहेन निर्वर्तयितुम् प्रसीद ।  
-दिनावसानोत्सुकबालवत्सा विसृज्यतान् धेनुरियम् महर्षेः ॥ ४५ ॥
+स त्वम् मदीयेन शरीर-वृत्तिन्  
+देहेन **निर्वर्तयितुम् प्रसीद** ।  
+दिनावसानोत्सुक-बाल-वत्सा  
+**विसृज्यतान्** धेनुर् इयम् महर्षेः ॥ ४५ ॥+++(5)+++
 </details>
 <details><summary>मूलम्</summary>
 
@@ -736,8 +764,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-अथान्धकारं गिरिगह्वराणान् दंष्ट्रामयूखैः शकलानि कुर्वन् ।  
-भूयः स भूतेश्वरपार्श्ववर्ती किञ्चिद्विहस्यार्थपतिम् बभाषे ॥ ४६ ॥
+अथान्धकारं गिरि-गह्वराणान्  
+दंष्ट्रा-मयूखैः शकलानि **कुर्वन्** ।  
+भूयः स भूतेश्वर-पार्श्व-वर्ती  
+किञ्चिद् **विहस्यार्थपतिम् बभाषे** ॥ ४६ ॥
 </details>
 <details><summary>मूलम्</summary>
 
@@ -753,13 +783,15 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-एकातपत्रं जगतः प्रभुत्वं नवं ययः कान्तम् इदं वपुश्च ।  
-अल्पस्य हेतोर्बहु हातुम् इच्छन्विचारमूधः प्रतिभासि मे त्वम् ॥ ४७ ॥
+एकातप-त्रं जगतः प्रभुत्वं  
+नवं वयः, कान्तम् इदं वपुश्च ।  
+अल्पस्य हेतोर् बहु **हातुम् इच्छन्**  
+विचार-मूढः **प्रतिभासि** मे त्वम् ॥ ४७ ॥
 </details>
 <details><summary>मूलम्</summary>
 
-एकातपत्रं जगतः प्रभुत्वं नवं ययः कान्तम् इदं वपुश्च ।  
-अल्पस्य हेतोर्बहु हातुम् इच्छन्विचारमूधः प्रतिभासि मे त्वम् ॥ ४७ ॥
+एकातपत्रं जगतः प्रभुत्वं नवं **ययः** कान्तम् इदं वपुश्च ।  
+अल्पस्य हेतोर्बहु हातुम् इच्छन्विचारमूढः प्रतिभासि मे त्वम् ॥ ४७ ॥
 </details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/47.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
@@ -770,8 +802,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-भूतानुकम्पा तव चेदियं गौरेका भवेत्स्वस्तिमती त्वदन्ते ।  
-जीवन्पुनः शश्वदुपप्लवेभ्यः प्रजाः प्रजानाथ पितेव पासि ॥ ४८ ॥
+भूतानुकम्पा तव चेद् इयं गौर्  
+एका **भवेत्** स्वस्तिमती त्वद्-अन्ते ।  
+जीवन् पुनः शश्वद्-उपप्लवेभ्यः  
+प्रजाः प्रजा-नाथ पितेव **पासि** ॥ ४८ ॥
 </details>
 <details><summary>मूलम्</summary>
 
@@ -787,8 +821,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-अथैकधेनोरपराधचण्डाद्गुरोः कृषानुप्रतिमाद्बिभेषि ।  
-शक्योऽस्य मन्युर्भवता विनेतुं गाः कोटिशः स्पर्शयता घटोध्नीः ॥ ४९ ॥
+अथैक-धेनोर् अपराध-चण्डाद्  
+गुरोः कृषानु-प्रतिमाद् **बिभेषि** ।  
+**शक्यो** ऽस्य मन्युर् भवता **विनेतुं**  
+गाः कोटिशः **स्पर्शयता** घटो-ध्नीः ॥ ४९ ॥
 </details>
 <details><summary>मूलम्</summary>
 
@@ -804,8 +840,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-तद्रक्ष कल्याणपरम्पराणाम् भोक्तारम् ऊर्जस्वलम् आत्मदेहम् ।  
-महीतलस्पर्शनमात्रभिन्नम् ऋद्धं हि राज्यम् पदम् ऐन्द्रम् आहुः ॥ ५० ॥
+तद् **रक्ष** कल्याण-परम्पराणाम्  
+**भोक्तारम्** ऊर्जस्वलम् आत्म-देहम् ।  
+मही-तल-स्पर्शन-मात्र-भिन्नम्  
+ऋद्धं हि राज्यम् पदम् ऐन्द्रम् **आहुः** ॥ ५० ॥+++(र5)+++
 </details>
 <details><summary>मूलम्</summary>
 
@@ -821,14 +859,18 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-एतावदुक्त्वा विरते मृगेन्द्रे प्रतिस्वनेनास्य गुहागतेन ।  
-शिलोच्चयोऽपि क्षितिपालम् उच्चैः प्रीत्या तम् एवार्थम् अभाषतेव ॥ ५१ ॥
+एतावद् उक्त्वा **विरते** मृगेन्द्रे  
+प्रतिस्वनेनास्य गुहागतेन ।  
+शिलोच्चयो ऽपि क्षितिपालम् उच्चैः  
+प्रीत्या तम् एवार्थम् **अभाषतेव** ॥ ५१ ॥+++(5)+++
 </details>
 <details><summary>मूलम्</summary>
 
 एतावदुक्त्वा विरते मृगेन्द्रे प्रतिस्वनेनास्य गुहागतेन ।  
 शिलोच्चयोऽपि क्षितिपालम् उच्चैः प्रीत्या तम् एवार्थम् अभाषतेव ॥ ५१ ॥
 </details>  
+
+### श्रेयश्-चितिः
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/51.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
@@ -838,8 +880,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-निशम्य देवानुचरस्य वाचम् मनुष्यदेवः पुनरप्युवाच ।  
-धेन्वा तदध्यासितकातराक्ष्या निरीक्ष्यमाणः सुतरान् दयालुः ॥ ५२ ॥
+निशम्य देवानुचरस्य वाचम्  
+मनुष्य-देवः पुनर् अप्य् **उवाच** ।  
+धेन्वा तद्-अध्यासित-कातराक्ष्या  
+**निरीक्ष्यमाणः** सुतरान् दयालुः ॥ ५२ ॥
 </details>
 <details><summary>मूलम्</summary>
 
@@ -855,8 +899,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-क्षतात्किल त्रायत इत्युदग्रः क्षत्रस्य शब्दो भुवनेषु रूढः ।  
-राज्येन किन् तद्विपरीतवृत्तेः प्राणैरुपक्रोशमलीमसैर्वा ॥ ५३ ॥
+क्षतात् किल **त्रायत इत्य्** उदग्रः  
+क्षत्रस्य शब्दो भुवनेषु **रूढः** ।  
+राज्येन किन् तद् विपरीत-वृत्तेः  
+प्राणैर् उपक्रोश+++(=निन्दा)+++-मलीमसैर् वा ॥ ५३ ॥+++(5)+++
 </details>
 <details><summary>मूलम्</summary>
 
@@ -866,14 +912,16 @@ unicode_script = "devanagari"
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/53.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
-क्षतादिति॥ 'क्षणु हिंसायाम्' इति धातोः संपदादित्पात्क्विप्। 'गमादीनाम्'(वा.4073) इति वक्तव्यादनुनासिकलोपे तुगागमे च क्षदिति रूपं सिद्धम्। क्षतो नाशात्त्रायत इति क्षत्त्रः। 'सुपि-'(पा.3।2।4) इति योगविभागात्कः। तामेतां व्युत्पत्तिं कविरर्थतोऽनुक्रामति-क्षतादित्यादिना। उदग्र उन्नतः क्षत्त्रवर्णस्य शब्दो वाचकः। क्षत्त्रशब्द इत्यर्थः। क्षतात्त्रायत इति व्युत्पत्त्या भुवनेषु रूढः किल प्रसिद्धः। खलु। नाश्वकर्णादिवत्केवलरूढः किंतु पङ्कजादिवद्योगरूढ इत्यर्थः। ततः किमित्य आह-तस्य'क्षत्त्र'शब्दस्य विपरीतवृत्तेर्विरुद्धव्यापारस्य क्षतस्त्राणमकुर्वतः पुंसो राज्येन किम्? उपक्रोशमलीमसैर्निन्दामलिनैः। 'उपक्रोशोजुगुप्सा च कुत्सा निन्दा च गर्हणे'इत्यमरः। 'ज्योत्स्नातमिस्रा-'(पा.5।2।114)इत्यादिना 'मलीमैस'शब्दो निपातितः। 'मलीमसं तु मलिनं कञ्चरं मलदूषितम्'इत्यमरः। तैः प्राणैर्वा किम्? निन्दितस्य सर्वं व्यर्थमित्यर्थः। एतेन 'एकातपत्रम्'(2।47)इत्यादिना श्लोकद्वयेनोक्तं प्रत्युक्तमिति वेदितव्यम् ॥ 53 ॥
+क्षतादिति॥ 'क्षणु हिंसायाम्' इति धातोः संपदादित्पात्क्विप्। 'गमादीनाम्'(वा.4073) इति वक्तव्यादनुनासिकलोपे तुगागमे च क्षदिति रूपं सिद्धम्। क्षतो नाशात्त्रायत इति क्षत्त्रः। 'सुपि-'(पा.3।2।4) इति योगविभागात्कः। तामेतां व्युत्पत्तिं कविरर्थतोऽनुक्रामति-क्षतादित्यादिना। उदग्र उन्नतः क्षत्त्रवर्णस्य शब्दो वाचकः। क्षत्त्रशब्द इत्यर्थः। क्षतात्त्रायत इति व्युत्पत्त्या भुवनेषु रूढः किल प्रसिद्धः। खलु। नाश्वकर्णादिवत्केवलरूढः किंतु पङ्कजादिवद्योगरूढ इत्यर्थः। ततः किमित्य आह-तस्य'क्षत्त्र'शब्दस्य विपरीतवृत्तेर्विरुद्धव्यापारस्य क्षतस्त्राणमकुर्वतः पुंसो राज्येन किम्? **उपक्रोशमलीमसैर्** निन्दामलिनैः। 'उपक्रोशोजुगुप्सा च कुत्सा निन्दा च गर्हणे'इत्यमरः। 'ज्योत्स्नातमिस्रा-'(पा.5।2।114)इत्यादिना 'मलीमैस'शब्दो निपातितः। 'मलीमसं तु मलिनं कञ्चरं मलदूषितम्'इत्यमरः। तैः प्राणैर्वा किम्? निन्दितस्य सर्वं व्यर्थमित्यर्थः। एतेन 'एकातपत्रम्'(2।47)इत्यादिना श्लोकद्वयेनोक्तं प्रत्युक्तमिति वेदितव्यम् ॥ 53 ॥
 </details>
 </div>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-कथं नु शक्योऽनुनयो महर्षेर्विश्राणनाच्चान्यपयस्विनीनम्।  
-इमाम् अनूनां सुरभेरवेहि रुद्रौजसा तु पहृतन् त्वयास्याम् ॥ ५४ ॥
+**कथं** नु **शक्यो** ऽनुनयो महर्षेर्  
+विश्राणनाच् चान्य-पयस्विनीनम्।  
+इमाम् अन्-ऊनां सुरभेर् **अवेहि**  
+रुद्रौजसा तु **पहृतन्** त्वया ऽस्याम् ॥ ५४ ॥
 </details>
 <details><summary>मूलम्</summary>
 
@@ -889,8 +937,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-सेयं स्वदेहार्पणनिष्क्रयेण न्याय्या मया मोचयितुम् भवत्तः ।  
-न पारणा स्याद्विहता तवैवम् भवेदलुप्तश्च मुनेः क्रियार्थः ॥ ५५ ॥
+सेयं स्व-देहार्पण-निष्क्रयेण  
+**न्याय्या** मया **मोचयितुम्** भवत्तः ।  
+**न पारणा स्याद् विहता** तवैवम्  
+भवेद् **अलुप्तश्** च मुनेः **क्रियार्थः** ॥ ५५ ॥
 </details>
 <details><summary>मूलम्</summary>
 
@@ -907,8 +957,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-भवानपीदम् परवानवैति महान्हि यत्नस्तव देवदारौ ।  
-स्थातुं नियोक्तुर्न हि शक्यम् अग्रे विनाश्य रक्ष्यं स्वयम् अक्षतेन ॥ ५६ ॥
+भवान् अपीदम् परवान् **अवैति**  
+महान् हि यत्नस् तव देवदारौ ।  
+**स्थातुं** नियोक्तुर् न हि शक्यम् अग्रे  
+**विनाश्य** रक्ष्यं स्वयम् अक्षतेन ॥ ५६ ॥+++(5)+++
 </details>
 <details><summary>मूलम्</summary>
 
@@ -924,13 +976,15 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-किम् अप्यहिंस्यस्तव चेन्मतोऽहं यशःशरीरे भव मे दयालुः ।  
-एकान्तविधंसिषु मद्विधानाम् पिण्डेष्वनास्था खलु भौतिकेषु ॥ ५७ ॥
+किम् अप्य् **अहिंस्यस्** तव चेन् **मतो** ऽहं  
+यशःशरीरे **भव** मे **दयालुः** ।  
+एकान्त-विध्वंसिषु मद्-विधानाम्  
+पिण्डेष्व् **अनास्था** खलु **भौतिकेषु** ॥ ५७ ॥+++(5)+++
 </details>
 <details><summary>मूलम्</summary>
 
 किम् अप्यहिंस्यस्तव चेन्मतोऽहं यशःशरीरे भव मे दयालुः ।  
-एकान्तविधंसिषु मद्विधानाम् पिण्डेष्वनास्था खलु भौतिकेषु ॥ ५७ ॥
+एकान्तविध्वंसिषु मद्विधानाम् पिण्डेष्वनास्था खलु भौतिकेषु ॥ ५७ ॥
 </details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/57.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
@@ -941,8 +995,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-सम्बन्धम् आभाषणपूर्वम् आहुर्वृत्तः स नौ सङ्गतयोर्वनान्ते ।  
-तद्भूतनाथानुग नार्हसि त्वं सम्बन्धिनो मे प्रणयं विहन्तुम् ॥ ५८ ॥
+**सम्बन्धम्** आभाषण-पूर्वम् **आहुर्**  
+**वृत्तः** स नौ सङ्गतयोर् वनान्ते ।  
+तद्-भूत-नाथानु-ग **नार्हसि** त्वं  
+सम्बन्धिनो मे **प्रणयं विहन्तुम्** ॥ ५८ ॥+++(4)+++
 </details>
 <details><summary>मूलम्</summary>
 
@@ -956,15 +1012,18 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+### प्रसादः
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-तथेति गाम् उक्तवते दिलीपः सद्यः प्रतिष्टम्भविमुक्तबाहुः ।  
-स न्यस्त शस्त्रो हरये स्वदेहम् उपानयत्पिण्डम् इवामिषस्य ॥ ५९ ॥
+तथेति गां **मुक्तवते** दिलीपः  
+सद्यः प्रतिष्टम्भ-विमुक्त-बाहुः ।  
+स **न्यस्त-शस्त्रो** हरये स्व-देहम्  
+**उपानयत्** पिण्डम् इवामिषस्य ॥ ५९ ॥+++(र4)+++
 </details>
 <details><summary>मूलम्</summary>
 
-तथेति गाम् उक्तवते दिलीपः सद्यः प्रतिष्टम्भविमुक्तबाहुः ।  
-स न्यस्त शस्त्रो हरये स्वदेहम् उपानयत्पिण्डम् इवामिषस्य ॥ ५९ ॥
+तथेति गां मुक्तवते दिलीपः सद्यः प्रतिष्टम्भविमुक्तबाहुः ।  
+स न्यस्तशस्त्रो हरये स्वदेहम् उपानयत्पिण्डम् इवामिषस्य ॥ ५९ ॥
 </details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/59.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
@@ -975,13 +1034,15 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-तस्मिन्क्षणे पालयितुः प्रजानाम् उत्पश्यतः सिंहनिपातम् उग्रम् ।  
-अवाङ्मुखस्य्ऽओपरि पुष्पवृष्टिः पपात विद्याधरहस्तमुक्ता ॥ ६० ॥
+तस्मिन् क्षणे पालयितुः प्रजानाम्  
+**उत्पश्यतः** सिंह-निपातम् उग्रम् ।  
+अवाङ्-मुखस्योपरि **पुष्प-वृष्टिः  
+पपात** विद्या-धर-हस्त-मुक्ता ॥ ६० ॥+++(5)+++
 </details>
 <details><summary>मूलम्</summary>
 
 तस्मिन्क्षणे पालयितुः प्रजानाम् उत्पश्यतः सिंहनिपातम् उग्रम् ।  
-अवाङ्मुखस्य्ऽओपरि पुष्पवृष्टिः पपात विद्याधरहस्तमुक्ता ॥ ६० ॥
+अवाङ्मुखमुखस्योपरि पुष्पवृष्टिः पपात विद्याधरहस्तमुक्ता ॥ ६० ॥
 </details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/60.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
@@ -992,8 +1053,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-उत्तिष्ठ वत्सेत्यमृतायमानं वचो निशम्योत्थितम् उत्थितः सन् ।  
-ददर्श राजा जननीम् इव स्वां गाम् अग्रतः प्रस्रविणीं न सिंहम् ॥ ६१ ॥
+उत्तिष्ठ वत्सेत्य् **अमृतायमानं**  
+वचो **निशम्योत्थितम् उत्थितः** सन् ।  
+**ददर्श** राजा जननीम् इव स्वां  
+गाम् अग्रतः **प्रस्रविणीं**, न सिंहम् ॥ ६१ ॥+++(र4)+++
 </details>
 <details><summary>मूलम्</summary>
 
@@ -1009,12 +1072,14 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-तं विस्मितन् धेनुरुवाच साधो मायाम् मयोध्भाव्य परीक्षितोऽसि ।  
-ऋषिप्रभावान्मयि नान्तकोऽपि प्रभुः प्रहर्तुं किम् उतान्यहिंस्राः ॥ ६२ ॥
+तं **विस्मितन्** धेनुर् **उवाच** "साधो  
+मायाम् मयोद्भाव्य **परीक्षितोऽसि** ।  
+ऋषि-प्रभावान् मयि नान्तकोऽपि  
+प्रभुः **प्रहर्तुं** किम् उतान्य-हिंस्राः ॥ ६२ ॥+++(4)+++
 </details>
 <details><summary>मूलम्</summary>
 
-तं विस्मितन् धेनुरुवाच साधो मायाम् मयोध्भाव्य परीक्षितोऽसि ।  
+तं विस्मितन् धेनुरुवाच साधो मायाम् मयोद्भाव्य परीक्षितोऽसि ।  
 ऋषिप्रभावान्मयि नान्तकोऽपि प्रभुः प्रहर्तुं किम् उतान्यहिंस्राः ॥ ६२ ॥
 </details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/62.md">
@@ -1026,12 +1091,14 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-भक्त्या गुरौ मय्यनुकम्पाय च प्रीतास्मि ते पुत्र वरं वृणीष्व ।  
-न केवलानाम् पयसाम् प्रसूतिम् अवेहि मां कामदुघाम् प्रसन्नाम् ॥ ६३ ॥
+भक्त्या गुरौ मय्य् अनुकम्पया च  
+**प्रीतास्मि** ते पुत्र **वरं वृणीष्व** ।  
+न केवलानाम् पयसाम् प्रसूतिम्  
+**अवेहि** मां **काम-दुघाम् प्रसन्नाम्** ॥ ६३ ॥+++(5)+++
 </details>
 <details><summary>मूलम्</summary>
 
-भक्त्या गुरौ मय्यनुकम्पाय च प्रीतास्मि ते पुत्र वरं वृणीष्व ।  
+भक्त्या गुरौ मय्यनुकम्पया च प्रीतास्मि ते पुत्र वरं वृणीष्व ।  
 न केवलानाम् पयसाम् प्रसूतिम् अवेहि मां कामदुघाम् प्रसन्नाम् ॥ ६३ ॥
 </details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/63.md">
@@ -1043,8 +1110,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-ततः समानीय समानितार्थी हस्तौ स्वहस्तार्जितवीरशब्दः ।  
-वंशस्य कर्तारम् अनन्तकीर्तिं सुदक्षिणायान् तनयं ययाचे ॥ ६४ ॥
+ततः समानीय स मानितार्थी  
+हस्तौ स्व-हस्तार्जित-वीरशब्दः ।  
+वंशस्य कर्तारम् अनन्त-कीर्तिं  
+सुदक्षिणायान् **तनयं ययाचे** ॥ ६४ ॥
 </details>
 <details><summary>मूलम्</summary>
 
@@ -1060,13 +1129,15 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-सन्तानकामाय तथेति कामर्ँ राज्ञे प्रतिश्रुत्य पयस्विनी सा ।  
-दुग्ध्वा पयः पत्त्रपुटे मदीयम् पुत्र्ऽ ओपभुङ्क्ष्व्ऽ एति तम् आदिदेश ॥ ६५ ॥
+सन्तान-कामाय तथेति कामं  
+राज्ञे **प्रतिश्रुत्य** पयस्विनी सा ।  
+"**दुग्ध्वा** पयः पत्त्र-पुटे मदीयम्  
+**पुत्रोपभुङ्क्ष्वे"ति** तम् **आदिदेश** ॥ ६५ ॥
 </details>
 <details><summary>मूलम्</summary>
 
-सन्तानकामाय तथेति कामर्ँ राज्ञे प्रतिश्रुत्य पयस्विनी सा ।  
-दुग्ध्वा पयः पत्त्रपुटे मदीयम् पुत्र्ऽ ओपभुङ्क्ष्व्ऽ एति तम् आदिदेश ॥ ६५ ॥
+सन्तानकामाय तथेति कामं राज्ञे प्रतिश्रुत्य पयस्विनी सा ।  
+दुग्ध्वा पयः पत्त्रपुटे मदीयम् पुत्रोपभुङ्क्ष्वेति तम् आदिदेश ॥ ६५ ॥
 </details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/65.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
@@ -1077,12 +1148,14 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-वत्सस्य ह्ॐआर्थविधेश्च शेषम् ऋषेरनुज्ञाम् अधिगम्य मातः ।  
-ऊधस्यम् इच्छामि तवोपभोक्तुम्यं षष्ठाम्शम् उर्व्या इव रक्षितायाः ॥ ६६ ॥
+"वत्सस्य होमार्थविधेश् च शेषम्  
+ऋषेर् **अनुज्ञाम् अधिगम्य** मातः ।  
+ऊधस्यम् **इच्छामि** तवोपभोक्तुम्यं  
+षष्ठांशम् उर्व्या इव रक्षितायाः" ॥ ६६ ॥+++(5)+++
 </details>
 <details><summary>मूलम्</summary>
 
-वत्सस्य ह्ॐआर्थविधेश्च शेषम् ऋषेरनुज्ञाम् अधिगम्य मातः ।  
+वत्सस्य होमार्थविधेश्च शेषम् ऋषेरनुज्ञाम् अधिगम्य मातः ।  
 ऊधस्यम् इच्छामि तवोपभोक्तुम्यं षष्ठाम्शम् उर्व्या इव रक्षितायाः ॥ ६६ ॥
 </details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/66.md">
@@ -1094,8 +1167,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-इत्थं क्षितीशेन वसिष्ठधेनुर्विज्ञापिता प्रीततरा बभूव ।  
-तदन्विता हैमवताच्च कुक्षेः प्रत्याययावाश्रमम् अश्रमेण ॥ ६७ ॥
+इत्थं क्षितीशेन वसिष्ठ-धेनुर्  
+**विज्ञापिता प्रीततरा बभूव** ।  
+तद्-अन्विता हैमवताच् च कुक्षेः  
+**प्रत्याययाव्** आश्रमम् अश्रमेण ॥ ६७ ॥
 </details>
 <details><summary>मूलम्</summary>
 
@@ -1111,8 +1186,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-तस्याः प्रसन्नेन्दुमुखः प्रसादं गुरुर्नृपाणां गुरवे निवेद्य ।  
-प्रहर्षचिह्नानुमितम् प्रियायै शशंस वाचा पुनरुक्तयेव ॥ ६८ ॥
+तस्याः प्रसन्नेन्दु-मुखः प्रसादं  
+गुरुर् नृपाणां, गुरवे **निवेद्य** ।  
+प्रहर्ष-चिह्नानुमितम् प्रियायै  
+**शशंस** वाचा पुनर् उक्तयेव ॥ ६८ ॥+++(5)+++
 </details>
 <details><summary>मूलम्</summary>
 
@@ -1128,8 +1205,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-स नन्दिनीस्तन्यम् अनिन्दितात्मा सद्वत्सलो वत्सहुतावशेषम् ।  
-पपौ वसिष्ठेन कृताभ्यनुज्ञः शुभ्रं यशो मूर्तम् इवातितृष्णः ॥ ६९ ॥
+स नन्दिनी-स्तन्यम् अ-निन्दितात्मा  
+सद्-वत्सलो वत्स-हुतावशेषम् ।  
+**पपौ** वसिष्ठेन कृताभ्यनुज्ञः  
+शुभ्रं यशो मूर्तम् इवातितृष्णः ॥ ६९ ॥
 </details>
 <details><summary>मूलम्</summary>
 
@@ -1145,12 +1224,14 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-प्रातर्यथोक्तव्रतपारणान्ते प्रास्थानिकं स्वस्त्ययनम् प्रयुज ।  
-तौ दम्पती स्वाम् प्रति राजधानीम् प्रस्थापयाम् आस वशी वसिष्ठः ॥ ७० ॥
+प्रातर् यथोक्त-व्रत-पारणान्ते  
+प्रास्थानिकं स्वस्त्य्-अयनम् **प्रयुज्य** ।  
+तौ दम्पती स्वाम् प्रति राज-धानीम्  
+**प्रस्थापयाम् आस** वशी वसिष्ठः ॥ ७० ॥
 </details>
 <details><summary>मूलम्</summary>
 
-प्रातर्यथोक्तव्रतपारणान्ते प्रास्थानिकं स्वस्त्ययनम् प्रयुज ।  
+प्रातर्यथोक्तव्रतपारणान्ते प्रास्थानिकं स्वस्त्ययनम् प्रयुज्य ।  
 तौ दम्पती स्वाम् प्रति राजधानीम् प्रस्थापयाम् आस वशी वसिष्ठः ॥ ७० ॥
 </details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/70.md">
@@ -1162,8 +1243,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-प्रदक्षिणीकृत्य हुतं हुताशम् अनन्तरम् भर्तुररुन्धतीं च ।  
-धेनुं सवत्सां च नृपः प्रतस्थे सन्मङ्गलोदग्रतरप्रभावः ॥ ७१ ॥
+**प्रदक्षिणी-कृत्य हुतं** हुताशम्  
+अनन्तरम् भर्तुर्, अरुन्धतीं च ।  
+धेनुं स-वत्सां च, नृपः **प्रतस्थे**  
+सन्-मङ्गलोदग्रतर-प्रभावः ॥ ७१ ॥
 </details>
 <details><summary>मूलम्</summary>
 
@@ -1173,14 +1256,17 @@ unicode_script = "devanagari"
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/71.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
-प्रदक्षिणीकृत्येति॥ नृपो हुतं तर्पितम्। हुतमश्नातीति हुताशोऽग्निः। 'कर्मण्यण्'(पा.3।2।12)। तं भर्तुर्मुनेरनन्तरम्। प्रदक्षिणानन्तरमित्यर्थः। अरुन्धतीं च सवत्सां धेनुं च प्रदक्षिणीकृत्य । प्रगतो दक्षिणं प्रदक्षिणम्। 'तिष्ठद्गुप्रभृतीनि च'(पा.2।1।17) इत्यव्ययीभावः। ततश्चिवः। अप्रदक्षिणं प्रदक्षिणं संपद्यमानं कृत्वा प्रदक्षिणीकृत्य। सद्भिर्मङ्गलैः प्रदक्षिणादिभिर्मङ्गलाचारैरुदग्रतरप्रभावः सन्। प्रतस्थे ॥ 71 ॥
+प्रदक्षिणीकृत्येति॥ **नृपो हुतं** तर्पितम्। हुतमश्नातीति **हुताशो** ऽग्निः। 'कर्मण्यण्'(पा.3।2।12)।  
+तं भर्तुर् मुनेरनन्तरम्। प्रदक्षिणानन्तरमित्यर्थः। अरुन्धतीं च सवत्सां धेनुं च प्रदक्षिणीकृत्य । प्रगतो दक्षिणं प्रदक्षिणम्। 'तिष्ठद्गुप्रभृतीनि च'(पा.2।1।17) इत्यव्ययीभावः। ततश्चिवः। अप्रदक्षिणं प्रदक्षिणं संपद्यमानं कृत्वा प्रदक्षिणीकृत्य। सद्भिर्मङ्गलैः प्रदक्षिणादिभिर्मङ्गलाचारैरुदग्रतरप्रभावः सन्। प्रतस्थे ॥ 71 ॥
 </details>
 </div>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-श्रोताभिरामध्वनिना रथेन स धर्मपत्नीसहितः सहिष्णुः ।  
-ययावनुद्घातसुखेन मार्गं स्वेनेव पूर्णेन मनोरथेन ॥ ७२ ॥
+श्रोताभिराम-ध्वनिना रथेन  
+स धर्म-पत्नी-सहितः सहिष्णुः ।  
+**ययाव्** अन्-उद्घात+++(=jolt)+++-सुखेन मार्गं  
+स्वेनेव पूर्णेन मनोरथेन ॥ ७२ ॥+++(4)+++
 </details>
 <details><summary>मूलम्</summary>
 
@@ -1196,8 +1282,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-तम् आहितौत्सुक्यम् अदर्शनेन प्रजाः प्रजार्थव्रतकर्शिताङ्गम् ।  
-नेत्रैः पपुस्तृप्तिम् अनाप्नुवद्भिर्नवोदयं नाथम् इवौषधीनाम् ॥ ७३ ॥
+तम् आहितौत्सुक्यम् अदर्शनेन  
+प्रजाः प्रजार्थ-व्रत-कर्शिताङ्गम् ।  
+नेत्रैः **पपुस्** तृप्तिम् अनाप्नुवद्भिर्  
+नवोदयं नाथम् इवौषधीनाम् ॥ ७३ ॥+++(5)+++
 </details>
 <details><summary>मूलम्</summary>
 
@@ -1213,13 +1301,15 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-पुरन्दरश्रीः पुरम् उत्पताकम् प्रविश्य पौरैरभिनन्द्यमानः ।  
-भुजे भुअङ्गेन्द्रसमानसारे भूयः स भूमेर्धुरम् आससञ्ज ॥ ७४ ॥
+पुरन्दर-श्रीः पुरम् उत्पताकम्  
+**प्रविश्य** पौरैर् **अभिनन्द्यमानः** ।  
+भुजे भुजङ्गेन्द्र-समान-सारे  
+भूयः स भूमेर् **धुरम् आससञ्ज** ॥ ७४ ॥
 </details>
 <details><summary>मूलम्</summary>
 
 पुरन्दरश्रीः पुरम् उत्पताकम् प्रविश्य पौरैरभिनन्द्यमानः ।  
-भुजे भुअङ्गेन्द्रसमानसारे भूयः स भूमेर्धुरम् आससञ्ज ॥ ७४ ॥
+भुजे भुजङ्गेन्द्रसमानसारे भूयः स भूमेर्धुरम् आससञ्ज ॥ ७४ ॥
 </details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/74.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
@@ -1230,13 +1320,15 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-अथ नयनसमुत्थं ज्योतिरत्रेरिव द्यौः सुरसरिदिव तेजो वह्निनिष्ठ्यूतम् ऐशम् ।  
-नरपतिकुलभूत्यै गर्भम् आधत्त राज्ञी गुरुभिरभिनिविष्टल्ँ लोकपालानुभावैः ॥ ७५ ॥
+अथ नयन-समुत्थं ज्योतिर् अत्रेर् +++(→चन्द्र)+++ इव द्यौः  
+सुर-सरिद् इव तेजो वह्नि-निष्ठ्यूतम् ऐशम् ।  
+नर-पति-कुल-भूत्यै **गर्भम् आधत्त** राज्ञी  
+गुरुभिर् अभिनिविष्टं लोक-पालानुभावैः ॥ ७५ ॥
 </details>
 <details><summary>मूलम्</summary>
 
 अथ नयनसमुत्थं ज्योतिरत्रेरिव द्यौः सुरसरिदिव तेजो वह्निनिष्ठ्यूतम् ऐशम् ।  
-नरपतिकुलभूत्यै गर्भम् आधत्त राज्ञी गुरुभिरभिनिविष्टल्ँ लोकपालानुभावैः ॥ ७५ ॥
+नरपतिकुलभूत्यै गर्भम् आधत्त राज्ञी गुरुभिरभिनिविष्टं लोकपालानुभावैः ॥ ७५ ॥
 </details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/75.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
