--- a/laxyam/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/03.md
+++ b/laxyam/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/03.md
@@ -3,12 +3,16 @@ title = "०३ रघु-राज्याभिषेकः"
 unicode_script = "devanagari"
 
 +++
+
+## दोहदम्
 <div caption="वेदभूमिपाठः" class="audioEmbed" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga03-01-08.mp3"></div>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-अथेप्सितं भर्तुरुपस्थितोदयं सखीजनोद्वीक्षणकौमुदीमुखम् ।  
-निदानमिक्ष्वाकुकुलस्य संततेः सुदक्षिणा दौहृदलक्षणं दधौ ॥ १॥
+**अथेप्सितं** भर्तुर् **उपस्थितोदयं**  
+सखीजनोद्वीक्षण-कौमुदी-मुखम् ।  
+निदानम् इक्ष्वाकु-कुलस्य संततेः  
+सुदक्षिणा **दौहृद-लक्षणं दधौ** ॥ १॥
 </details>
 <details><summary>मूलम्</summary>
 
@@ -24,8 +28,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-शरीरसादादसमग्रभूषणा मुखेन सालक्ष्यत लोध्रपाण्डुना ।  
-तनुप्रकाशेन विचेयतारका प्रभातकल्पा शशिनेव शर्वरी ॥ २॥
+शरीर-सादाद् अ-समग्र-भूषणा  
+मुखेन सा **ऽलक्ष्यत** लोध्र-पाण्डुना ।  
+तनु-प्रकाशेन विचेय-तारका  
+प्रभात-कल्पा शशिनेव शर्वरी ॥ २॥+++(4)+++
 </details>
 <details><summary>मूलम्</summary>
 
@@ -35,14 +41,16 @@ unicode_script = "devanagari"
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/02.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
-शरीरेति॥ शरीरस्य सादात् काश्यादसमग्रभूषणा परिमिताभरणा लोध्रपुष्पवत् पाण्डुना मुखेनोपलक्षिता सा सुदक्षिणा। विचेया मृग्यास्तारका यस्यां सा तथोक्ता। विरलनक्षत्रेत्यर्थः। तनुप्रकाशेनाल्पकान्तिना शशिनोपलक्षितेषदसमाप्तप्रभाता प्रभातकल्पा। प्रभातादीषदूनेत्यर्थः। 'तसिलादिष्वा कृत्वसुचः'(पा.6।3।35) इति 'प्रभात'शब्दस्य पुंवद्भावः। शर्वरी रात्रिरिव। अलक्ष्यत। शरीरसादादिगर्भलक्षणमाह वाग्भटः(अ.हृ.शा1।50)-'क्षामता गरिमा कुक्षेमूर्च्छा छर्दिररोचकम्। जृम्भा प्रसेकः सदनं रोमराज्याः प्रकाशनम्॥' इति ॥ 2 ॥
+शरीरेति॥ शरीरस्य सादात् कार्श्यादसमग्रभूषणा परिमिताभरणा लोध्रपुष्पवत् पाण्डुना मुखेनोपलक्षिता सा सुदक्षिणा। विचेया मृग्यास्तारका यस्यां सा तथोक्ता। विरलनक्षत्रेत्यर्थः। तनुप्रकाशेनाल्पकान्तिना शशिनोपलक्षितेषदसमाप्तप्रभाता प्रभातकल्पा। प्रभातादीषदूनेत्यर्थः। 'तसिलादिष्वा कृत्वसुचः'(पा.6।3।35) इति 'प्रभात'शब्दस्य पुंवद्भावः। शर्वरी रात्रिरिव। अलक्ष्यत। शरीरसादादिगर्भलक्षणमाह वाग्भटः(अ.हृ.शा1।50)-'क्षामता गरिमा कुक्षेमूर्च्छा छर्दिररोचकम्। जृम्भा प्रसेकः सदनं रोमराज्याः प्रकाशनम्॥' इति ॥ 2 ॥
 </details>
 </div>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-तदाननं मृत्सुरभि क्षितीश्वरो रहस्युपाघ्राय न तृप्तिमाययौ ।  
-करीव सिक्तं पृषतैः पयोमुचां शुचिव्यपाये वनराजिपल्वलम् ॥ ३॥
+तद्-आननं मृत्-सुरभि क्षितीश्वरो  
+रहस्य् **उपाघ्राय न तृप्तिम् आययौ** ।  
+करीव सिक्तं पृषतैः पयो-मुचां  
+शुचि-व्यपाये वन-राजि-पल्वलम् ॥ ३॥+++(4)+++
 </details>
 <details><summary>मूलम्</summary>
 
@@ -58,8 +66,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-दिवं मरुत्वानिव भोक्ष्यते भुवं दिगन्तविश्रान्तरथो हि तत्सुतः ।  
-अतोऽभिलाषे प्रथमं तथाविधे मनो बबन्धान्यरसान्विलङ्घ्य सा ॥ ४॥
+दिवं मरुत्वान् इव **भोक्ष्यते** भुवं  
+दिगन्त-विश्रान्त-रथो हि तत्-सुतः ।  
+अतो ऽभिलाषे प्रथमं तथा-विधे  
+मनो बबन्धान्य-रसान् **विलङ्घ्य** सा ॥ ४॥
 </details>
 <details><summary>मूलम्</summary>
 
@@ -75,8 +85,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-न मे ह्रिया शंसति किंचिदीप्सितं स्पृहावती वस्तुषु केषु मागधी ।  
-इति स्म पृच्छत्यनुवेलमादृतः प्रियासखीरुत्तरकोसलेश्वरः ॥ ५॥
+"**न** मे ह्रिया **शंसति** किंचिद् **ईप्सितं**  
+**स्पृहावती** वस्तुषु केषु मागधी ।"  
+इति **स्म पृच्छत्य्** अनुवेलम् **आदृतः**  
+प्रिया-सखीर् उत्तर-कोसलेश्वरः ॥ ५॥
 </details>
 <details><summary>मूलम्</summary>
 
@@ -92,8 +104,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-उपेत्य सा दोहददुःखशीलतां यदेव वव्रे तदपश्यदाहृतम् ।  
-न हीष्टमस्य त्रिदिवेऽपि भूपतेरभूदनासाद्यमधिज्यधन्वनः ॥ ६॥
+**उपेत्य** सा दोहद-दुःख-शीलतां  
+यद् एव **वव्रे** तद् **अपश्यद् आहृतम्** ।  
+**न हीष्टम्** अस्य त्रिदिवेऽपि भूपतेर्  
+**अभूद् अनासाद्यम्** अ-धिज्य-धन्वनः ॥ ६॥
 </details>
 <details><summary>मूलम्</summary>
 
@@ -107,10 +121,13 @@ unicode_script = "devanagari"
 </details>
 </div>
 
+## पीनावस्था
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-क्रमेण निस्तीर्य च दोहदव्यथां प्रचीयमानावयवा रराज सा ।  
-पुराणपत्रापगमादनन्तरं लतेव संनद्धमनोज्ञपल्लवा ॥ ७॥
+क्रमेण **निस्तीर्य** च दोहद-व्यथां  
+**प्रचीयमानावयवा रराज** सा ।  
+पुराण-पत्रापगमाद् अनन्तरं  
+लतेव संनद्ध--मनो-ज्ञ--पल्लवा ॥ ७॥+++(4)+++
 </details>
 <details><summary>मूलम्</summary>
 
@@ -126,13 +143,15 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-दिनेषु गच्छत्सु नितान्तपीवरं तदीयमानीलमुखं स्तनद्वयम् ।  
-तिरश्चकार भ्रमराभिनीलयोः सुजातयोः पङ्कजकोशयोः श्रियम् ॥ ८॥
+दिनेषु गच्छत्सु नितान्त-पीवरं  
+तदीयम् आनील-मुखं स्तन-द्वयम् ।  
+**तिरश् चकार** भ्रमराभिलीनयोः  
+सुजातयोः पङ्कज-कोशयोः श्रियम् ॥ ८॥
 </details>
 <details><summary>मूलम्</summary>
 
 दिनेषु गच्छत्सु नितान्तपीवरं तदीयमानीलमुखं स्तनद्वयम् ।  
-तिरश्चकार भ्रमराभिनीलयोः सुजातयोः पङ्कजकोशयोः श्रियम् ॥ ८॥
+तिरश्चकार भ्रमराभिलीनयोः सुजातयोः पङ्कजकोशयोः श्रियम् ॥ ८॥
 </details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/03/08.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
