--- a/laxyam/padyam/shrIvaiShNava-kRtam/venkaTanAthaH/yAdavAbhyudayam/04.md
+++ b/laxyam/padyam/shrIvaiShNava-kRtam/venkaTanAthaH/yAdavAbhyudayam/04.md
@@ -21,7 +21,7 @@ title = "04 सर्गः-4"
 तेनैव तस्य त्रिजगन्नियन्तुः प्रायुङ्क्त रक्षां परमार्थवेदी ॥
 
 गोपाश्च संभूय गुहोपमाक्षीं स्वघोषनिर्ह्रादितविश्वघोषाम् ।   
-गतासुमैक्षन्त निशाचरीं तां भीमाकृतिं भीमरथीमिवान्यां ॥
+गतासुमैक्षन्त निशाचरीं तां भीमाकृतिं भीमरथीमिवान्याम् ॥
 
 परश्वधैस्तत्क्षणशातितैस्तां विच्छिद्य विन्ध्याचलसानुकल्पाम् ।   
 अनःप्रवृत्या बहिराशु निन्युः क्रव्याद्बलिं प्राज्यमिव क्षिपन्तः ॥
