--- a/laxyam/rUpakam/sankalpa-sUryodayaH/mUlam/02.md
+++ b/laxyam/rUpakam/sankalpa-sUryodayaH/mUlam/02.md
@@ -226,7 +226,8 @@ title = "02"
 माहाराष्ट्रीं मागधीं शौरसेनीं लाटीं गौडीमित्थमन्यादृशीं च ।  
 अङ्गीकुर्वन्त्यागमीकृत्य दत्तां हास्यां भाषां हन्त बुद्धार्हताद्यैः ॥ ५७ ॥  
 अहं त्वशेषभाषावेदी तत्तदभ्यस्तभाषयाऽपि तार्किकानेतान्प्रतिक्षेप्स्यामि । वदन्ति हि पिशाचानां पिशाचभाषयैवोत्तरं देयमिति ।  
-गुरुः - यथारुचि दैवीमदैवीं वा भाषां पुरस्कुर्याः । अपि तु दैव्येव विश्वहृदयङ्गमा । महाराजोऽपि प्रायशस्तस्यामेव बहु(लं)लदत्तदृष्टिः । राजा - भगवन्, अतिधृष्टोऽयं भवत्प्रसादगोचरो महानुभावः ।  
+गुरुः - यथारुचि दैवीमदैवीं वा भाषां पुरस्कुर्याः । अपि तु दैव्येव विश्वहृदयङ्गमा । महाराजोऽपि प्रायशस्तस्यामेव बहु(लं)लदत्तदृष्टिः ।  
+राजा - भगवन्, अतिधृष्टोऽयं भवत्प्रसादगोचरो महानुभावः ।  
 सेनापतिः - किमत्र चित्रम्?  
 कथाकलहकौतुकग्रहगृहीतकौतस्कुतप्रथाजलधिसंप्लवग्रसनकुम्भसंभूतयः ।  
 जयन्ति सुधियो यतिक्षितिभृदन्तिकोपासनप्रभावपरिपक्त्रिमप्रमितिभारतीसंपदः ॥ ५८ ॥  
