--- a/laxyam/rUpakam/sankalpa-sUryodayaH/meta/nArAyaNa-raghunAthau/02.md
+++ b/laxyam/rUpakam/sankalpa-sUryodayaH/meta/nArAyaNa-raghunAthau/02.md
@@ -640,8 +640,9 @@ Senapati.-Lord!
 [[139]] 
 
 
-(Behind the curtain), (1 ery):— 
-Devils! Devils!! 
+(Behind the curtain), (A cry):—  
+Devils! Devils!!  
+
 Senapati.--Not so, not so. These are Digambaras with the mingled1 (feelings of) joy and sorrow at the overthrow of the Saugata creed, and vetoers of the evidences of Perception and Inference. So do they dupe others. 
 1.  Dirt-smearing folk these, and pea- 
 2. Digambaras. (a sect of the Jainas). 
